--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="flex">
     <div class="box">
         <div class="field">
-            <a class="back">← Back</a>
+            <a class="back">Back</a>
         </div>
         <form [formGroup]="form" class="form-content">
             <div>
@@ -11,14 +11,14 @@
                 <h3 class="title">Create an acount</h3>
             </div>
             <div class="field">
-                <div class="half">
+                <div class="half" appIconColorChange>
                     <button class="button google" type="button">
-                    <i class="fa fa-google logo"></i>Sign up with Google
-                </button>
+                        <i class="fa fa-google logo"></i>Sign up with Google
+                    </button>
                 </div>
-                <div class="half">
+                <div class="half" appIconColorChange>
                     <button class="button facebook" type="button"><i class="fa fa-facebook logo"></i>Sign up with
-                    Facebook</button>
+                        Facebook</button>
                 </div>
             </div>
             <div class="description field">
@@ -46,17 +46,20 @@
                 <span *ngIf="isShowPassword" class="passwordVal">{{ this.form.get('password').value }}</span>
                 <i class="fa fa-eye icon" [ngClass]="{'colorBlue': isShowPassword}" (click)="showPassword()"></i>
                 <span class="warn" margin-right-20 *ngIf="this.form.get('password').value">
-                    <i class="fa fa-check-circle warn-circle" 
-                    [ngClass]="{'active': !this.form.get('password').errors?.minlength}"></i>8 Characters min.
+                    <i class="fa fa-check-circle warn-circle"
+                        [ngClass]="{'active': !this.form.get('password').errors?.minlength}"></i>8 Characters min.
                 </span>
                 <span class="warnSecond" *ngIf="this.form.get('password').value">
-                    <i class="fa fa-check-circle warn-circle" 
-                    [ngClass]="{'active': !this.form.get('password').errors?.oneNumberError}"></i>One Number.</span>
+                    <i class="fa fa-check-circle warn-circle"
+                        [ngClass]="{'active': !this.form.get('password').errors?.oneNumberError}"></i>One Number.</span>
             </div>
             <div class="agree">
-                <input type="checkbox" class="check" formControlName="isAgree" />
-                <label class="term">By creating account, you agree to accept our Privacy Policy, Terms of Service and
-                    Notification settings.</label>
+                <label>
+                    <input type="checkbox" formControlName="isAgree" />
+                    <span></span>
+                    <label class="term">By creating account, you agree to accept our Privacy Policy, Terms of Service
+                        and Notification settings.</label>
+                </label>
             </div>
             <div class="field">
                 <button class="button primary" type="button" (click)="create()">Create an Free Account!</button>
